blogs/eks-appmesh-connectivity/deployments/yaml/mesh/istio/external-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: recipepuppy-services
spec:
  hosts:
    - "www.recipepuppy.com"
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https-443
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: cache-service-entry
spec:
  hosts:
    - "replace-me.amazonaws.com"
  ports:
    - number: 6379
      name: es-6379
      protocol: TCP      
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: rds-service-entry
spec:
  hosts:
    - "yelb-db-cluster.cluster-c5k62vniwn2m.us-east-1.rds.amazonaws.com"
  ports:
    - number: 5432
      name: db-5432
      protocol: TCP     
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: aws-services-entry
spec:
  hosts:
    - "*.amazonaws.com"    
  location: MESH_EXTERNAL
  resolution: NONE
