blogs/eks-appmesh-connectivity/deployments/yaml/mesh/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yelb-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-80
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: yelb-ui
spec:
  hosts:
    - "*"
  gateways:
    - yelb-gateway
  http:
    - route:
        - destination:
            host: yelb-appserver
            subset: v1
            port:
              number: 4567
          weight: 100
        - destination:
            host: yelb-appserver
            subset: v2
            port:
              number: 4567
          weight: 0
      match:
        - uri:
            prefix: /api
    - route:
        - destination:
            host: yelb-ui
            port:
              number: 80
      match:
        - uri:
            prefix: /

---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
    # mode: ALLOW_ANY
